# EHRenderer

./: .gitignore  LICENSE  README.md
EHRenderer/: CMakeLists.txt
EHRenderer/EHRenderer/: ApplicationClass.cpp  ApplicationClass.hpp  CMakeLists.txt  EHRenderer.h  ImporterBase.hpp  InputClass.cpp  InputClass.hpp  RenderEngineBase.hpp  ResourceManager.cpp  ResourceManager.hpp  SimpleInputClass.cpp  SimpleInputClass.hpp  SystemClass.cpp  SystemClass.hpp  TimerClass.cpp  TimerClass.hpp  main.cpp
EHRenderer/EHRenderer/Data/: Material.cpp  Material.hpp  MaterialUtils.hpp  ModelBase.hpp  RenderUnit.cpp  RenderUnit.hpp  ShaderBase.hpp  Transform.hpp
EHRenderer/EHRenderer/DirectX11/: CMakeLists.txt  CameraClass.cpp  CameraClass.hpp  D3DClass.cpp  D3DClass.hpp  DX11RE.cpp  DX11RE.hpp  DisplayPlaneClass.cpp  DisplayPlaneClass.hpp  FrustumClass.cpp  FrustumClass.hpp  InputClass.cpp  InputClass.hpp  ModelListClass.cpp  ModelListClass.hpp  OrthoWindowClass.hpp  PositionClass.cpp  PositionClass.hpp  RenderTextureClass.cpp  ShaderManager.cpp  ShaderManager.hpp  tmp.hpp
EHRenderer/EHRenderer/DirectX11/Data/: DeferredBuffersClass.cpp  DeferredBuffersClass.hpp  DisplayPlaneClass.cpp  DisplayPlaneClass.hpp  FontClass.cpp  FontClass.hpp  ModelClass.cpp  ModelClass.hpp  OrthoWindowClass.cpp  RenderTextureClass.cpp  RenderTextureClass.hpp  SimpleModelClass.cpp  SimpleModelClass.hpp  SpriteClass.cpp  SpriteClass.hpp  TextClass.cpp  TextureClass.cpp  TextureClass.hpp
EHRenderer/EHRenderer/DirectX11/Font/: FontClass.cpp
EHRenderer/EHRenderer/DirectX11/Model/: ModelClass.cpp  ModelClass.hpp  SimpleModelClass.cpp
EHRenderer/EHRenderer/DirectX11/Object/: CameraClass.cpp  CameraClass.hpp  LIghtClass.cpp  LightClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/: DX11Shader.cpp  DX11Shader.hpp  DX11ShaderBase.cpp  DX11ShaderBase.hpp  LIghtClass.cpp  LightClass.hpp  ShaderBase.cpp  ShaderBase.hpp  TextureClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/AlphaMap/: AlphaMapShaderClass.cpp  AlphaMapShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Blur/: BlurClass.cpp  BlurClass.hpp  BlurShaderClass.cpp  BlurShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/ClipPlane/: ClipPlaneShaderClass.cpp  ClipPlaneShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Color/: ColorShaderClass.cpp  ColorShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Deferred/: DeferredShaderClass.cpp  DeferredShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Depth/: DepthShaderClass.cpp  DepthShaderClass.hpp  TransparentDepthShaderClass.cpp  TransparentDepthShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Fade/: FadeShaderClass.cpp  FadeShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Fire/: FireShaderClass.cpp  FireShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Fog/: FogShaderClass.cpp  FogShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Font/: FontShaderClass.cpp  FontShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/GBuffer/: GbufferShaderClass.cpp  GbufferShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Glass/: GlassShaderClass.cpp  GlassShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Glow/: GlowShaderClass.cpp  GlowShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/HLSL/: Alphamap.vs  Blur.ps  Blur.vs  ClipPlane.ps  ClipPlane.vs  Color.vs  Deferred.ps  Deferred.vs  Depth.ps  Depth.vs  Fade.ps  Fade.vs  Fire.ps  Fire.vs  Fog.ps  Fog.vs  Font.ps  Font.vs  GBuffer.ps  GBuffer.vs  Glass.ps  Glass.vs  Glow.ps  Glow.vs  Light.ps  Light.vs  Lightmap.ps  Lightmap.vs  NormalMap.ps  NormalMap.vs  Particle.ps  Particle.vs  Projection.ps  Projection.vs  Reflection.ps  Reflection.vs  Refraction.ps  Refraction.vs  Specmap.ps  Specmap.vs  (+8 more)
EHRenderer/EHRenderer/DirectX11/Shader/Light/: LightShaderClass.cpp  LightShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/LightMap/: LightMapShaderClass.cpp  LightMapShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/MultiTexture/: MultiTextureShaderClass.cpp  MultiTextureShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/NormalMap/: NormalMapShaderClass.cpp  NormalMapShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Particle/: ParticleShaderClass.cpp  ParticleShaderClass.hpp  ParticleSystemClass.cpp  ParticleSystemClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Projection/: ProjectionShaderClass.cpp  ProjectionShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Reflection/: ReflectionShaderClass.cpp  ReflectionShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Refraction/: RefractionShaderClass.cpp  RefractionShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Shadow/: DirectionalLightShadowShaderClass.cpp  DirectionalLightShadowShaderClass.hpp  MultiLightShadowShaderClass.cpp  MultiLightShadowShaderClass.hpp  ShadowShaderClass.cpp  ShadowShaderClass.hpp  SoftShadowShaderClass.cpp  SoftShadowShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/SpecMap/: SpecMapShaderClass.cpp  SpecMapShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Ssao/: SsaoBlurShaderClass.cpp  SsaoBlurShaderClass.hpp  SsaoShaderClass.cpp  SsaoShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Texture/: MultiTextureShaderClass.cpp  MultiTextureShaderClass.hpp  TextureshaderClass.cpp  TextureshaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Translate/: TranslateShaderClass.cpp  TranslateShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Transparent/: TransparentShaderClass.cpp  TransparentShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Shader/Water/: WaterShaderClass.cpp  WaterShaderClass.hpp
EHRenderer/EHRenderer/DirectX11/Sprite/: SpriteClass.cpp
EHRenderer/EHRenderer/DirectX11/Text/: TextClass.cpp  TextClass.hpp
EHRenderer/EasyH/: CMakeLists.txt  EasyH.hpp  Singleton.hpp
EHRenderer/EasyH/DictionaryConnector/: IDictionaryConnector.hpp  JsonDictionaryConnector.cpp  JsonDictionaryConnector.hpp
EHRenderer/EasyH/LangKit/: LangManager.cpp  LangManager.hpp
EHRenderer/EasyH/ListConnector/: IListConnector.hpp  JsonListConnector.cpp  JsonListConnector.hpp
(+30 files in other folders)
